# plasmoid-updater

./: Cargo.toml  LICENSE  README.md  cargo.sh  release.sh  widgets-id
.github/workflows/: release.yml
crates/libplasmoid-updater/: Cargo.toml
crates/libplasmoid-updater/src/: api.rs  backup.rs  config.rs  discovery.rs  error.rs  installer.rs  lib.rs  paths.rs  registry.rs  resolver.rs  types.rs  version.rs
crates/plasmoid-updater/: Cargo.toml
crates/plasmoid-updater/src/: config.rs  main.rs
docs/superpowers/plans/: 2026-03-27-install-hardening.md
libplasmoid-updater/: Cargo.toml  README.md
libplasmoid-updater/src/: backup.rs  config.rs  error.rs  lib.rs  paths.rs  types.rs  utils.rs  version.rs
libplasmoid-updater/src/api/: client.rs  config.rs  mod.rs  ocs_parser.rs
libplasmoid-updater/src/checker/: discovery.rs  evaluation.rs  mod.rs  registry.rs  resolution.rs  store.rs
libplasmoid-updater/src/cli/: mod.rs  output.rs  progress.rs  update_ui.rs
libplasmoid-updater/src/installer/: backup.rs  download.rs  inhibit.rs  install.rs  lock.rs  mod.rs  plasmashell.rs  privilege.rs
libplasmoid-updater/src/registry/: manager.rs  mod.rs  utils.rs  xml.rs
plasmoid-updater/: Cargo.toml
plasmoid-updater/src/: cli_config.rs  exit_code.rs  main.rs  output.rs  progress.rs  system.rs
plasmoid-updater/src/commands/: check.rs  list_installed.rs  mod.rs  update.rs
