[workspace]
resolver = "3"
members = ["libplasmoid-updater", "plasmoid-updater"]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/uwuclxdy/plasmoid-updater"

[workspace.dependencies]
libplasmoid-updater = { path = "libplasmoid-updater", features = ["cli"] }
