[package]
name = "libplasmoid-updater"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library for updating KDE Plasma 6 components from the KDE Store"
keywords = ["kde", "plasma", "widgets", "updater", "plasmoid"]
categories = ["development-tools"]
readme = "README.md"
repository = "https://github.com/uwuclxdy/plasmoid-updater"
homepage = "https://github.com/uwuclxdy/plasmoid-updater"
documentation = "https://docs.rs/libplasmoid-updater"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
thiserror = "2.0.18"
log = "0.4.29"
md5 = "0.8.0"
rayon = "1.11.0"
parking_lot = "0.12.5"
versions = "7.0.0"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
fs_extra = "1.3.0"
freedesktop_entry_parser = "2.0.1"
