[package]
name = "libplasmoid-updater"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library for updating KDE Plasma 6 components from the KDE Store. Meant for use in topgrade."
keywords = ["kde", "plasma", "widgets", "updater", "plasmoid"]
categories = ["development-tools"]
readme = "README.md"
repository = "https://github.com/uwuclxdy/plasmoid-updater"
homepage = "https://github.com/uwuclxdy/plasmoid-updater"
documentation = "https://docs.rs/libplasmoid-updater"

[features]
default = ["cli"]
cli = ["indicatif", "comfy-table", "bytesize", "inquire", "is-terminal", "terminal_size"]
debug = []

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "rustls",
] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
thiserror = "2.0.18"
log = "0.4.29"
md5 = "0.8.0"
rayon = "1.11.0"
parking_lot = "0.12.5"
versions = "7.0.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
fs_extra = "1.3.0"
freedesktop_entry_parser = "2.0.1"
nix = { version = "0.31.1", features = ["user"] }

# CLI-only dependencies
indicatif = { version = "0.18.4", optional = true }
comfy-table = { version = "7.2.2", optional = true }
bytesize = { version = "2.3.1", optional = true }
inquire = { version = "0.9.4", optional = true }
is-terminal = { version = "0.4.17", optional = true }
terminal_size = { version = "0.4.1", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
# version override for nix cus tempfile breaks it if 0.31.0
nix = { version = "0.31.0", features = ["user"] }
