[package]
name = "plasmoid-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for updating KDE Plasma 6 components from the KDE Store"
keywords = ["kde", "plasma", "widgets", "updater", "cli"]
categories = ["command-line-utilities"]
readme = "../README.md"
homepage = "https://github.com/uwuclxdy/plasmoid-updater"

[[bin]]
name = "plasmoid-updater"
path = "src/main.rs"

[dependencies]
libplasmoid-updater = { path = "../libplasmoid-updater", features = ["cli"] }
clap = { version = "4.6.0", features = ["derive"] }
toml = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["user"] }
