[package]
name = "libplasmoid-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for updating KDE Plasma 6 components from the KDE Store"
keywords = ["kde", "plasma", "widgets", "updater"]
categories = ["development-tools"]

[dependencies]
reqwest.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
thiserror.workspace = true
log.workspace = true
md5.workspace = true
rayon.workspace = true
parking_lot.workspace = true
