[package]
name = "plasmoid-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for updating KDE Plasma 6 components from the KDE Store"
keywords = ["kde", "plasma", "widgets", "updater", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "plasmoid-updater"
path = "src/main.rs"

[dependencies]
libplasmoid-updater.workspace = true
clap.workspace = true
toml.workspace = true
atty.workspace = true
serde_json.workspace = true
dirs.workspace = true
serde.workspace = true
